--- a/blocks/reviews/reviews.css
+++ b/blocks/reviews/reviews.css
@@ -35,7 +35,6 @@
 
 }
 
-
 .reviews__content {
   display: flex;
   flex-direction: column;
@@ -43,8 +42,6 @@
   width: 50%;
   padding-left: 80px;
 }
-
-
 
 .reviews_text {
   font-family: 'Cardo', sans-serif;
@@ -62,10 +59,29 @@
   color: #fff;
 }
 
-@media (max-width: 414px) {
+@media (max-width: 991px) {
+  .reviews__photo {
+    width: 100%;
+    margin: 15px 0 40px;
+    overflow: hidden;
+  }
 
-  /*    Reviews*/
+  .reviews__content {
+    width: 100%;
+    padding-left: 0;
+    padding-bottom: 40px;
+  }
+}
+
+@media (max-width: 767px) {
+  .reviews_text {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 414px) {
   .reviews_img {
     right: -100px;
   }
 }
+
