--- a/blocks/burger/burger.css
+++ b/blocks/burger/burger.css
@@ -1,23 +1,18 @@
 .burger {
   display: none;
   padding: 10px 2px;
-
   background: none;
   border: 0;
   cursor: pointer;
-
 }
 
 .burger_item {
   display: block;
   width: 30px;
   height: 3px;
-
   background-color: #fff;
-
   font-size: 0;
   color: transparent;
-
   position: relative;
 }
 
@@ -27,7 +22,6 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
-
   position: absolute;
   left: 0;
   z-index: 1;
@@ -40,4 +34,10 @@
 
 .burger_item:after {
   bottom: -8px;
+}
+
+@media (max-width: 991px) {
+  .burger {
+    display: block;
+  }
 }
