--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -50,3 +50,21 @@
 .copyright--text span {
   color: #fff;
 }
+
+@media (max-width: 767px) {
+.footer__innet {
+  padding: 30px 0;
+}
+
+.foter_block {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  margin-bottom: 30px;
+}
+
+.foter_block:last-child {
+  margin-bottom: 0;
+}
+
+}
