--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -17,7 +17,6 @@
 
 .intro__title {
   margin: 0 0 30px;
-
   font-family: 'Open Sans', sans-serif;
   font-size: 65px;
   line-height: 1.1;
@@ -25,7 +24,6 @@
   font-weight: 700;
   text-transform: uppercase;
 }
-
 
 
 .intro_subtitle {
@@ -36,9 +34,13 @@
   font-weight: 400;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
+  .intro__title {
+    font-size: 40px;
+  }
+}
 
-  /*intro*/
+@media (max-width: 767px) {
   .intro {
     height: auto;
     padding-top: 130px;
@@ -52,67 +54,5 @@
   .intro_subtitle {
     margin-bottom: 30px;
     font-size: 16px;
-  }
-
-  /*    Features*/
-  .features {
-    margin: 40px 0;
-  }
-
-  .features__item {
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  /*    Works*/
-  .works_item {
-    width: 100%;
-    height: 300px;
-  }
-
-  /*    Team*/
-  .team {
-    margin: 60px 0 30px;
-  }
-
-  .team_item {
-    width: 100%;
-    text-align: center;
-  }
-
-  /*    Reviews*/
-  .reviews_text {
-    font-size: 25px;
-  }
-
-  /*btn*/
-  .btn--long {
-    min-width: 260px;
-  }
-
-  /*    Downloud*/
-  .downloud {
-    margin: 50px 0;
-  }
-
-  .download__title {
-    font-size: 24px;
-  }
-
-  /*Footer*/
-  .footer__innet {
-    padding: 30px 0;
-  }
-
-  .foter_block {
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
-    margin-bottom: 30px;
-  }
-
-  .foter_block:last-child {
-    margin-bottom: 0;
   }
 }
