--- a/blocks/team/team.css
+++ b/blocks/team/team.css
@@ -41,3 +41,26 @@
   line-height: 1.5;
   color: #6c7279;
 }
+
+@media (max-width: 991px) {
+  .team_item {
+    width: 50%;
+    text-align: center;
+  }
+
+  .team_photo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .team {
+    margin: 60px 0 30px;
+  }
+
+  .team_item {
+    width: 100%;
+    text-align: center;
+  }
+}
