--- a/blocks/works/works.css
+++ b/blocks/works/works.css
@@ -17,7 +17,6 @@
 }
 
 .works_Photo {
-  /*    min-width: 100%;*/
   position: absolute;
   top: 50%;
   left: 50%;
@@ -39,7 +38,6 @@
   left: 0;
   z-index: 2;
   transition: opacity .2s linear;
-
 }
 
 .works_title {
@@ -58,5 +56,12 @@
 @media (max-width: 1300px) {
   .works_item {
     width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  .works_item {
+    width: 100%;
+    height: 300px;
   }
 }
